--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -50,4 +50,7 @@ dependencies {
 //    implementation 'com.karumi.dexter:6.2.2'
 //    implementation ("io.coil-kt: coil:1.1.1")
     implementation 'androidx.media:media:1.6.0'
+    implementation 'androidx.work:work-runtime:2.8.0'
+    implementation 'androidx.work:work-runtime-ktx:2.8.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
